--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Administrativo/VisualizarUsuarios.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Administrativo/VisualizarUsuarios.cshtml
@@ -7,6 +7,22 @@
 <div class="container my-4">
     <h2 class="text-center mb-4">Usuarios registrados en el sistema</h2>
 
+    @if (TempData["MensajeExito"] != null)
+    {
+        <div class="alert alert-success text-center alert-dismissible fade show" role="alert">
+            @TempData["MensajeExito"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+
+    @if (TempData["MensajeError"] != null)
+    {
+        <div class="alert alert-danger text-center alert-dismissible fade show" role="alert">
+            @TempData["MensajeError"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+
     <div class="text-end mb-3">
         <a href="~/Administrativo/CrearUsuario" class="btn btn-primary">Registrar nuevo usuario</a>
     </div>
@@ -34,9 +50,10 @@
                         <td>@usuario.Rol.Nombre</td>
                         <td>
                             <!-- Botón de editar -->
-                            <a href="#" class="btn btn-warning me-1" title="Editar">
+                            <a href="@Url.Action("CambiarRol", "Administrativo", new { id = usuario.IdUsuario })" class="btn btn-warning me-1" title="Editar">
                                 <i class="bi bi-pencil"></i>
                             </a>
+
                             <!-- Botón de bloquear -->
                             <a href="#" class="btn btn-danger me-1" title="Bloquear">
                                 <i class="bi bi-lock"></i>
