--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/Registro.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Acceso/Registro.cshtml
@@ -53,3 +53,13 @@
         @ViewData["Mensaje"]
     </div>
 }
+
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="alert alert-danger text-center">
+        @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+        {
+            <p>@error.ErrorMessage</p>
+        }
+    </div>
+}
